+ getting data on the screen with LINQ

--- a/WpfDataGridSQLExample/WpfDataGridSQLExample.csproj
+++ b/WpfDataGridSQLExample/WpfDataGridSQLExample.csproj
@@ -102,6 +102,9 @@
     <Compile Include="ProductCategory.cs">
       <DependentUpon>AdventureWorksModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="ProductSubcategory.cs">
+      <DependentUpon>AdventureWorksModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
